# TidyComponent

./: .gitignore  .gitmodules  CMakeLists.txt  VersionConfig.h  db.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  structH.h
.github/workflows/: Windows-Qt6.5.1-Build-Release.yml
api/: CMakeLists.txt
components/: AddComponent.cpp  AddComponentLogic.cpp  ApplyLogic.cpp  ColorDelegate.h  ComponentLogic.cpp  ComponentTableModel.cpp  ComponentTableModel.h  EDAChromeHttpServer.cpp  EDAChromeHttpServer.h  GetFileRequestHandler.h  GetRequestHandler.h  ImageViewer.cpp  ImageViewer.h  JustWrapDelegate.h  QColorAllocator.cpp  QColorAllocator.h  ResizedTableView.cpp  ResizedTableView.h  SearchLogic.cpp  SerialPortLogic.cpp  SerialPortManager.cpp  SerialPortManager.h  ShowInfoModel .h  ShowInfoModel.h  ShowInfoModelLogic.cpp  WindowsUI.cpp  coordinatesManager.cpp  httpLogic.cpp  tableLogic.cpp  tableView.cpp  updateDBLogic.cpp
config/: db.json  device_config.json
config/Chrome/: Last Version  Local State  first_party_sets.db
config/Chrome/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
config/Chrome/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000002  f_000003  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  (+125 more)
config/Chrome/Default/Collaboration/: MessageDB
config/Chrome/Default/DataSharing/: DataSharingDB
config/Chrome/Default/DawnGraphiteCache/: data_1  index
config/Chrome/Default/DawnWebGPUCache/: data_1  index
config/Chrome/Default/Extension Rules/: LOG
config/Chrome/Default/Extension Scripts/: LOG  LOG.old
config/Chrome/Default/Extension State/: LOG  LOG.old
config/Chrome/Default/GCM Store/: LOG  LOG.old
config/Chrome/Default/GPUCache/: data_0  data_1  data_2  index
config/Chrome/Default/JumpListIconsRecentClosed/: b50288b7-e1ad-4de0-9eda-bee05c794218.tmp  f700d34d-dc2e-445c-9a94-06517cde6984.tmp
config/Chrome/Default/Network/: Cookies  Device Bound Sessions  Network Persistent State  Reporting and NEL  TransportSecurity
config/Chrome/Default/Platform Notifications/: LOG  LOG.old
config/Chrome/Default/Safe Browsing Network/: Safe Browsing Cookies
config/Chrome/Default/Session Storage/: LOG  LOG.old
config/Chrome/Default/Sessions/: Session_13396530457345868  Session_13396530979933019  Session_13396542600081454  Session_13397247151556350  Session_13397247321272839  Tabs_13396530980062778  Tabs_13396542600259479  Tabs_13397247151632009  Tabs_13397247321367382
config/Chrome/Default/Site Characteristics Database/: 000004.ldb  000008.ldb  000011.ldb  000028.ldb  LOG  LOG.old  MANIFEST-000001
config/Chrome/Default/WebStorage/: QuotaManager
config/Chrome/Default/shared_proto_db/: LOG  LOG.old
config/Chrome/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000021  f_000022  f_000023  f_000024  f_000025  f_000026  f_000027  (+13 more)
config/Chrome/GraphiteDawnCache/: data_1  index
config/Chrome/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13393585666849951  ChromeExtMalware.store.32_13393585952967694  ChromeExtMalware.store.32_13396531056648409  ChromeExtMalware.store.32_13397247549982358  UrlBilling.store  UrlBilling.store.4_13393586506084846  UrlBilling.store.4_13393587088056385  UrlBilling.store.4_13396538244816164  UrlBilling.store.4_13396540048131468  UrlBilling.store.4_13397247549990895  UrlCsdAllowlist.store  UrlCsdAllowlist.store.4_13393585666867322  UrlCsdAllowlist.store.4_13396531056658169  UrlCsdAllowlist.store.4_13397247549993890  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlHighConfidenceAllowlist.store.32_13393585666792250  UrlHighConfidenceAllowlist.store.32_13396531056631462  UrlHighConfidenceAllowlist.store.32_13397247549960520  UrlMalBin.store  UrlMalBin.store.4_13393586506076374  UrlMalBin.store.4_13393587088048074  UrlMalBin.store.4_13396538244811793  UrlMalBin.store.4_13396540048127507  UrlMalBin.store.4_13397247549977608  UrlMalware.store  UrlMalware.store.4_13393586506058791  UrlMalware.store.4_13393587088025435  UrlMalware.store.4_13396538244802411  UrlMalware.store.4_13396540048118697  UrlMalware.store.4_13397247549964647  UrlSoceng.store  UrlSoceng.store.4_13393586506045985  UrlSoceng.store.4_13393587088012530  UrlSoceng.store.4_13397247549954737  UrlSubresourceFilter.store  UrlSubresourceFilter.store.4_13393585666873532  UrlSubresourceFilter.store.4_13393585953077495  UrlSubresourceFilter.store.4_13396534692654437  (+13 more)
config/Chrome/ShaderCache/: data_0  data_1  data_2  index
config/Chrome/Snapshots/137.0.7151.56/: Local State
config/Chrome/component_crx_cache/: metadata.json
config/Chrome/segmentation_platform/: ukm_db
config/db/: C105577.json  C114245.json  C114526.json  C114531.json  C114533.json  C114541.json  C114543.json  C114544.json  C114546.json  C114547.json  C114548.json  C114556.json  C114558.json  C114559.json  C114563.json  C115962.json  C126352.json  C127985.json  C137482.json  C137484.json  C137498.json  C137503.json  C137507.json  C137509.json  C137513.json  C137518.json  C137534.json  C137558.json  C137559.json  C137588.json  C137592.json  C13967.json  C141697.json  C141699.json  C144547.json  C14663.json  C149504.json  C15850.json  C15903.json  C17673.json  (+37 more)
config/db/db/: C105577.json  C137507.json  C137534.json  C141697.json  C21120.json  C228941.json  C246031.json  C276315.json  C38141.json
icon/: LICENSE.txt
thirdLib/: CMakeLists.txt
thirdPartyTool/: mainwindow.ui
测试数据库/: 108db.json  BOM_Board1_Schematic1_2025-07-18.xlsx  db.json  device_config_Error.json  test1.http
测试数据库/NewDB/: db.json
(+223 files in other folders)
